k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-one
  namespace: dev
spec:
  selector:
    app: app-one
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
